problems/ingress/configuring-the-crypto-app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: cryptoapp
spec:
  rules:
    - http:
        paths:
          - path: /crypto-app/(.*)
            backend:
              serviceName: cryptoapp
              servicePort: 9090
